<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.downgoon</groupId>
	<artifactId>autorest4db</artifactId>
	<version>0.1.2-SHAPSHOT</version>
	<packaging>jar</packaging>

	<name>autorest4db</name>
	<description>
automatically generate a RESTful API of your database (sqlite3 or mysql) in runtime.</description>
	<url>https://github.com/downgoon/autorest4db</url>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git@github.com:downgoon/autorest4db.git</connection>
		<developerConnection>scm:git:git@github.com:downgoon/autorest4db.git</developerConnection>
		<url>http://github.com/downgoon/autorest4db</url>
		<tag>autorest4db-0.1.1</tag>
	</scm>

	<developers>
		<developer>
			<id>downgoon</id>
			<name>downgoon</name>
			<email>downgoon@qq.com</email>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>

		<dependency>
			<groupId>io.vertx</groupId>
			<artifactId>vertx-web</artifactId>
			<version>3.4.1</version>
		</dependency>

		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib</artifactId>
			<version>3.2.5</version>
		</dependency>

		<dependency>
			<groupId>org.javassist</groupId>
			<artifactId>javassist</artifactId>
			<version>3.20.0-GA</version>
		</dependency>

		<dependency>
			<groupId>com.github.downgoon</groupId>
			<artifactId>jresty-data-orm</artifactId>
			<version>0.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.downgoon</groupId>
			<artifactId>jresty-commons</artifactId>
			<version>0.0.1</version>
		</dependency>


		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.16.1</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.7</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.13</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.4</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>

			<!-- Download sources and javadocs for eclipse -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.7</version>
				<configuration>
					<configurationDirectory>conf</configurationDirectory>
					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
					<repositoryLayout>flat</repositoryLayout>
					<useWildcardClassPath>true</useWildcardClassPath>
					<daemons>
						<daemon>
							<id>${project.name}</id>
							<mainClass>io.downgoon.autorest4db.AutoRestMain</mainClass>
							<commandLineArguments>
								<commandLineArgument>start</commandLineArgument>
							</commandLineArguments>
							<platforms>
								<platform>jsw</platform>
							</platforms>
							<jvmSettings>

								<maxStackSize>128</maxStackSize>
								<systemProperties>
									<systemProperty>APP_HOME=.</systemProperty>
								</systemProperties>

								<extraArguments>
									<extraArgument>-server</extraArgument>
									<extraArgument>-XX:MaxPermSize=64M</extraArgument>
									<extraArgument>-Xms1G</extraArgument>
									<extraArgument>-Xmx2G</extraArgument>
								</extraArguments>

							</jvmSettings>
							<generatorConfigurations>
								<generatorConfiguration>
									<generator>jsw</generator>
									<includes>
										<include>aix-ppc-32</include>
										<include>aix-ppc-64</include>
										<include>hpux-parisc-64</include>
										<include>linux-x86-32</include>
										<include>linux-x86-64</include>
										<include>linux-ppc-64</include>
										<include>macosx-ppc-32</include>
										<include>macosx-x86-universal-32</include>
										<include>macosx-universal-32</include>
										<include>macosx-universal-64</include>
										<include>solaris-sparc-32</include>
										<include>solaris-sparc-64</include>
										<include>solaris-x86-32</include>
										<include>windows-x86-32</include>
										<include>windows-x86-64</include>
									</includes>

									<configuration>
										<property>
											<name>configuration.directory.in.classpath.first</name>
											<value>conf</value>
										</property>
										<property>
											<name>set.default.REPO_DIR</name>
											<value>lib</value>
										</property>
										<property>
											<name>wrapper.logfile</name>
											<value>logs/${project.name}.log</value>
										</property>
									</configuration>

								</generatorConfiguration>
							</generatorConfigurations>
						</daemon>

					</daemons>
				</configuration>
				<executions>
					<execution>
						<id>generate-jsw</id>
						<phase>package</phase>
						<goals>
							<goal>generate-daemons</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- package tar.gz -->
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptors>
						<descriptor>src/main/assembly/assembly.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>
